Servicio para obtener todos los equipos asociados a un club, servicio swagger
